<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".usb.MainActivity">

    <EditText
        android:id="@+id/etVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:inputType="text"
        android:gravity="center"
        android:hint="@string/et_volume_hint"
        android:importantForAutofill="no"
        android:text="@string/et_volume_text"
        tools:ignore="LabelFor"
        />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/etInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:inputType="text"
        android:gravity="center"
        android:hint="@string/et_input_hint"
        android:importantForAutofill="no"
        android:layout_marginTop="10dp"
        tools:ignore="LabelFor"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_save"
            android:layout_marginEnd="10dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnLoad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_load"
            android:layout_marginStart="10dp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/btnExternal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_usb"
        android:layout_marginTop="10dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/tvLoad"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>

</LinearLayout>